<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_deals"
        android:icon="@drawable/ic_card_travel_black_24dp"
        android:title="@string/title_deals"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:title="@string/title_history"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_profile"
        app:showAsAction="always|withText"/>

</menu>
