...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="16dp"
                android:layout_gravity="center_vertical">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/loginUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Phone Number"
                    android:inputType="phone"/>
                </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
...
