...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/balance"
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:background="@drawable/rounded_bottom_corners"
                android:gravity="center"
                android:text="Rp"
                android:textStyle="bold"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/withdrawButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_button"
                android:src="@drawable/ic_withdraw_35dp"
                android:tint="@color/White" />
...
