...
    <string name="phoneNumberNull">Phone number is required</string>
    <string name="locationNull">Location is required</string>
    <string name="emailError">Invalid email</string>
    <string name="passwordError">Your security code must be 6 digits</string>
    <string name="phoneNumberError">Invalid phone number</string>
    <string name="phoneNumberRegistered">Phone number is already used</string>
    <string name="wrongOTP">Verification pin is wrong</string>

    <string-array name="methods">
        <item>Select Method</item>
        <item>Scan QR</item>
        <item>Telephone Number</item>
    </string-array>
...
